-- ============================================================================
-- RBAC (Role-Based Access Control) Migration
-- ============================================================================
-- This migration implements a secure, flexible RBAC system using Supabase's
-- recommended Custom Access Token Auth Hook approach.
-- 
-- SECURITY NOTES:
-- 1. Roles are stored in JWT claims (cannot be tampered with client-side)
-- 2. RLS policies use the authorize() function to check permissions
-- 3. Only supabase_auth_admin can read/modify user_roles (not even authenticated users)
-- 4. The auth hook runs server-side before token issuance
-- ============================================================================

-- ============================================================================
-- STEP 1: Create custom types for roles and permissions
-- ============================================================================
-- Using ENUMs ensures type safety and prevents invalid values
-- Add new roles/permissions here as your app grows

create type public.app_role as enum ('user', 'moderator', 'admin');
create type public.app_permission as enum (
  -- User management permissions
  'users.read',
  'users.update',
  'users.delete',
  -- Items management permissions  
  'items.read_all',
  'items.update_all',
  'items.delete_all',
  -- Admin permissions
  'admin.access',
  'admin.manage_roles'
);

-- ============================================================================
-- STEP 2: Create user_roles table
-- ============================================================================
-- Tracks which roles are assigned to which users
-- A user can have multiple roles (though typically just one)

create table public.user_roles (
  id bigint generated by default as identity primary key,
  user_id uuid references auth.users(id) on delete cascade not null,
  role app_role not null default 'user',
  created_at timestamptz default now() not null,
  created_by uuid references auth.users(id),
  unique (user_id, role)
);

comment on table public.user_roles is 'Application roles assigned to users. Managed by admins only.';

-- Index for faster lookups
create index user_roles_user_id_idx on public.user_roles(user_id);
create index idx_user_roles_created_by on public.user_roles(created_by);

-- ============================================================================
-- STEP 3: Create role_permissions table
-- ============================================================================
-- Maps roles to their permissions
-- This is a configuration table - modify as needed for your app

create table public.role_permissions (
  id bigint generated by default as identity primary key,
  role app_role not null,
  permission app_permission not null,
  unique (role, permission)
);

comment on table public.role_permissions is 'Permissions granted to each role.';

-- ============================================================================
-- STEP 4: Seed default role permissions
-- ============================================================================

-- Admin gets all permissions
insert into public.role_permissions (role, permission) values
  ('admin', 'users.read'),
  ('admin', 'users.update'),
  ('admin', 'users.delete'),
  ('admin', 'items.read_all'),
  ('admin', 'items.update_all'),
  ('admin', 'items.delete_all'),
  ('admin', 'admin.access'),
  ('admin', 'admin.manage_roles');

-- Moderator gets limited permissions
insert into public.role_permissions (role, permission) values
  ('moderator', 'users.read'),
  ('moderator', 'items.read_all'),
  ('moderator', 'items.delete_all');

-- Regular users have no special permissions (they use standard RLS)
-- Their access is controlled by the existing user_id = auth.uid() policies

-- ============================================================================
-- STEP 5: Create the Custom Access Token Hook
-- ============================================================================
-- This function runs BEFORE every token is issued and injects the user's role
-- into their JWT claims. This is the ONLY secure way to pass role info.

create or replace function public.custom_access_token_hook(event jsonb)
returns jsonb
language plpgsql
stable
security definer
set search_path = ''
as $$
declare
  claims jsonb;
  user_role public.app_role;
begin
  -- Fetch the user's highest priority role
  -- Priority: admin > moderator > user
  select role into user_role 
  from public.user_roles 
  where user_id = (event->>'user_id')::uuid
  order by 
    case role 
      when 'admin' then 1 
      when 'moderator' then 2 
      when 'user' then 3 
    end
  limit 1;

  claims := event->'claims';
  
  if user_role is not null then
    -- Set the user_role claim
    claims := jsonb_set(claims, '{user_role}', to_jsonb(user_role));
  else
    -- Default to 'user' role if none assigned
    claims := jsonb_set(claims, '{user_role}', '"user"');
  end if;

  -- Update the claims in the event
  event := jsonb_set(event, '{claims}', claims);
  
  return event;
end;
$$;

-- ============================================================================
-- STEP 6: Grant permissions for the auth hook
-- ============================================================================
-- CRITICAL SECURITY: Only supabase_auth_admin should access these

-- Grant schema access
grant usage on schema public to supabase_auth_admin;

-- Grant execute on the hook function
grant execute on function public.custom_access_token_hook to supabase_auth_admin;

-- Revoke from everyone else
revoke execute on function public.custom_access_token_hook from authenticated, anon, public;

-- Grant table access to auth admin only
grant all on table public.user_roles to supabase_auth_admin;
grant all on table public.role_permissions to supabase_auth_admin;

-- Revoke from everyone else (CRITICAL - users should NOT be able to modify their own roles)
revoke all on table public.user_roles from authenticated, anon, public;
revoke all on table public.role_permissions from authenticated, anon, public;

-- ============================================================================
-- STEP 7: Create the authorize() function for RLS policies
-- ============================================================================
-- This function checks if the current user has a specific permission

create or replace function public.authorize(requested_permission app_permission)
returns boolean
language plpgsql
stable
security definer
set search_path = ''
as $$
declare
  user_role public.app_role;
  has_permission boolean;
begin
  -- Extract user role from JWT claims
  select (auth.jwt() ->> 'user_role')::public.app_role into user_role;
  
  -- If no role in JWT, deny access
  if user_role is null then
    return false;
  end if;
  
  -- Check if the role has the requested permission
  select exists(
    select 1 
    from public.role_permissions rp
    where rp.role = user_role 
    and rp.permission = requested_permission
  ) into has_permission;
  
  return has_permission;
end;
$$;

-- Grant execute to authenticated users (they need this for RLS policies)
grant execute on function public.authorize(app_permission) to authenticated;

-- ============================================================================
-- STEP 8: Create helper function to get current user's role
-- ============================================================================

create or replace function public.get_my_role()
returns app_role
language plpgsql
stable
security definer
set search_path = ''
as $$
begin
  return (auth.jwt() ->> 'user_role')::public.app_role;
end;
$$;

grant execute on function public.get_my_role() to authenticated;

-- ============================================================================
-- STEP 9: Create admin-only function for user management
-- ============================================================================
-- SECURITY: Using a function instead of a view because:
-- 1. Views that query auth.users expose data to all authenticated users
-- 2. Security definer views bypass RLS entirely
-- 3. Functions can enforce explicit permission checks before returning data

create or replace function public.get_admin_users()
returns table (
  id uuid,
  email text,
  created_at timestamptz,
  last_sign_in_at timestamptz,
  full_name text,
  avatar_url text,
  role text
)
language plpgsql
security definer
set search_path = ''
as $$
begin
  -- Strict admin check - only admins can access user data
  if not public.authorize('admin.access') then
    raise exception 'Access denied: Admin role required';
  end if;

  return query
  select 
    u.id,
    u.email::text,
    u.created_at,
    u.last_sign_in_at,
    u.raw_user_meta_data->>'full_name' as full_name,
    u.raw_user_meta_data->>'avatar_url' as avatar_url,
    coalesce(ur.role::text, 'user') as role
  from auth.users u
  left join public.user_roles ur on u.id = ur.user_id;
end;
$$;

-- Grant execute to authenticated users (the function itself enforces admin check)
grant execute on function public.get_admin_users() to authenticated;

-- ============================================================================
-- STEP 11: Create function to safely update user roles (admin only)
-- ============================================================================

create or replace function public.set_user_role(
  target_user_id uuid,
  new_role app_role
)
returns boolean
language plpgsql
security definer
set search_path = ''
as $$
begin
  -- Check if caller has permission to manage roles
  if not public.authorize('admin.manage_roles') then
    raise exception 'Unauthorized: You do not have permission to manage roles';
  end if;
  
  -- Prevent removing the last admin
  if new_role != 'admin' then
    if (select count(*) from public.user_roles where role = 'admin' and user_id != target_user_id) = 0 then
      if exists (select 1 from public.user_roles where user_id = target_user_id and role = 'admin') then
        raise exception 'Cannot remove the last admin';
      end if;
    end if;
  end if;
  
  -- Upsert the role
  insert into public.user_roles (user_id, role, created_by)
  values (target_user_id, new_role, auth.uid())
  on conflict (user_id, role) 
  do update set role = new_role;
  
  -- Remove old roles (user can only have one role at a time in this implementation)
  delete from public.user_roles 
  where user_id = target_user_id 
  and role != new_role;
  
  return true;
end;
$$;

grant execute on function public.set_user_role(uuid, app_role) to authenticated;

-- ============================================================================
-- STEP 12: Update items table policies to allow admin access
-- ============================================================================

-- Drop existing policies
drop policy if exists "Users can view their own items" on public.items;
drop policy if exists "Users can insert their own items" on public.items;
drop policy if exists "Users can update their own items" on public.items;
drop policy if exists "Users can delete their own items" on public.items;

-- Recreate with admin override
-- PERFORMANCE: Using (select auth.uid()) and (select public.authorize()) to prevent per-row re-evaluation
create policy "Users can view their own items or admin can view all"
  on public.items for select
  using (
    (select auth.uid()) = user_id 
    or (select public.authorize('items.read_all'))
  );

create policy "Users can insert their own items"
  on public.items for insert
  with check ((select auth.uid()) = user_id);

create policy "Users can update their own items or admin can update all"
  on public.items for update
  using (
    (select auth.uid()) = user_id 
    or (select public.authorize('items.update_all'))
  );

create policy "Users can delete their own items or admin can delete all"
  on public.items for delete
  using (
    (select auth.uid()) = user_id 
    or (select public.authorize('items.delete_all'))
  );

-- ============================================================================
-- STEP 13: Create trigger to auto-assign 'user' role on signup
-- ============================================================================

create or replace function public.handle_new_user_role()
returns trigger
language plpgsql
security definer
set search_path = ''
as $$
begin
  insert into public.user_roles (user_id, role)
  values (new.id, 'user')
  on conflict (user_id, role) do nothing;
  return new;
end;
$$;

-- Trigger on user creation
create trigger on_auth_user_created_add_role
  after insert on auth.users
  for each row execute function public.handle_new_user_role();

-- ============================================================================
-- DONE! 
-- ============================================================================
-- Next steps:
-- 1. Enable the hook in Supabase Dashboard > Authentication > Hooks
--    Or for local dev, update supabase/config.toml
-- 2. Manually assign admin role to your first admin user via SQL:
--    UPDATE public.user_roles SET role = 'admin' WHERE user_id = 'your-user-uuid';
-- ============================================================================
